--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <body id="body">
     <audio id="startbuttonsound" src="sound/zapsplat_multimedia_button_click_005_53866.mp3"></audio>
+    <audio id="backgroundMp3" src="sound/fall_out_boy_light_em_up.mp3" autoplay loop></audio>
 
     <div id="startcontainer">
       <button id="startbutton">START</button>
@@ -31,7 +32,9 @@
       <div class="game">
         <div id="player"></div>
         <div class="result">
+          <div class="play-again">
           <button id="play-again" style="display: none;">PLAY AGAIN</button>
+          </div>
           <div id="scoreD">
             <p id="score">0 - 0</p>
           </div>
