--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body id="body">
     <audio id="startbuttonsound" src="sound/zapsplat_multimedia_button_click_005_53866.mp3"></audio>
-    <audio id="backgroundMusic" src="sound/fall_out_boy_light_em_up.wav" autoplay></audio>
+    <audio id="backgroundMusic" src="sound/fall_out_boy_light_em_up.wav"></audio>
 
     <div id="startcontainer">
       <button id="startbutton">START</button>
